<resources>
    <string name="app_name">Navigation</string>

    <string name="navigation_first">First Screen</string>
    <string name="navigation_second">Second Screen</string>
    <string name="navigation_third">Third Screen</string>
    <string name="navigation_fourth">Fourth Screen</string>
    <string name="navigation_fifth">Fifth Screen</string>

    <string name="next_number">Next number</string>
    <string name="prev_number">Prev number</string>

    <!-- Bikes -->
    <string name="title_select_maker">Select Bike Maker Screen</string>

    <string name="bike_maker_giant">GIANT</string>
    <string name="bike_maker_merida">MERIDA</string>
    <string name="bike_maker_colnago">COLNAGO</string>
    <string name="bike_maker_pinarello">PINARELLO</string>
    <string name="bike_maker_carrera">CARRERA</string>

    <!-- Star -->
    <string name="title_select_star">Select Star Screen</string>

    <string name="sirius">Sirius</string>
    <string name="spica">Spica</string>
    <string name="albireo">Albireo</string>

</resources>
