<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/navigation_number"
            app:startDestination="@id/first_fragment">

    <fragment android:id="@+id/first_fragment"
              android:name="com.jetpack.navigation.view.number.FirstFragment"
              android:label="@string/navigation_first"
              tools:layout="@layout/fragment_first">

        <action android:id="@+id/first_to_second"
                app:destination="@id/second_fragment"
                app:enterAnim="@anim/slide_from_right"
                app:exitAnim="@anim/slide_to_left"
                app:popEnterAnim="@anim/slide_from_left"
                app:popExitAnim="@anim/slide_to_right"/>

    </fragment>

    <fragment android:id="@+id/second_fragment"
              android:name="com.jetpack.navigation.view.number.SecondFragment"
              android:label="@string/navigation_second"
              tools:layout="@layout/fragment_second">

        <action android:id="@+id/second_to_third"
                app:destination="@id/third_fragment"
                app:enterAnim="@anim/slide_from_right"
                app:exitAnim="@anim/slide_to_left"
                app:popEnterAnim="@anim/slide_from_left"
                app:popExitAnim="@anim/slide_to_right"/>

    </fragment>

    <fragment android:id="@+id/third_fragment"
              android:name="com.jetpack.navigation.view.number.ThirdFragment"
              android:label="@string/navigation_third"
              tools:layout="@layout/fragment_third">

        <action android:id="@+id/third_to_first"
                app:popUpTo="@id/first_fragment"
                app:popUpToInclusive="true"/>

    </fragment>

</navigation>