<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="match_parent">

        <androidx.cardview.widget.CardView android:id="@+id/giant"
                                           android:layout_width="wrap_content"
                                           android:layout_height="wrap_content"
                                           app:layout_constraintTop_toTopOf="parent"
                                           app:layout_constraintBottom_toTopOf="@id/merida"
                                           app:layout_constraintStart_toStartOf="parent"
                                           app:layout_constraintEnd_toEndOf="parent"
                                           app:cardBackgroundColor="@color/colorAccent"
                                           app:cardElevation="1dp"
                                           app:cardCornerRadius="6dp">

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_margin="14dp"
                      android:text="@string/bike_maker_giant"
                      android:textColor="@color/colorPrimary"
                      android:textSize="16sp"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView android:id="@+id/merida"
                                           android:layout_width="wrap_content"
                                           android:layout_height="wrap_content"
                                           app:layout_constraintTop_toBottomOf="@id/giant"
                                           app:layout_constraintBottom_toTopOf="@id/colnago"
                                           app:layout_constraintStart_toStartOf="parent"
                                           app:layout_constraintEnd_toEndOf="parent"
                                           app:cardBackgroundColor="@color/colorAccent"
                                           app:cardElevation="1dp"
                                           app:cardCornerRadius="6dp">

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_margin="14dp"
                      android:text="@string/bike_maker_merida"
                      android:textColor="@color/colorPrimary"
                      android:textSize="16sp"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView android:id="@+id/colnago"
                                           android:layout_width="wrap_content"
                                           android:layout_height="wrap_content"
                                           app:layout_constraintTop_toBottomOf="@id/merida"
                                           app:layout_constraintBottom_toTopOf="@id/pinarello"
                                           app:layout_constraintStart_toStartOf="parent"
                                           app:layout_constraintEnd_toEndOf="parent"
                                           app:cardBackgroundColor="@color/colorAccent"
                                           app:cardElevation="1dp"
                                           app:cardCornerRadius="6dp">

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_margin="14dp"
                      android:text="@string/bike_maker_colnago"
                      android:textColor="@color/colorPrimary"
                      android:textSize="16sp"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView android:id="@+id/pinarello"
                                           android:layout_width="wrap_content"
                                           android:layout_height="wrap_content"
                                           app:layout_constraintTop_toBottomOf="@id/colnago"
                                           app:layout_constraintBottom_toBottomOf="parent"
                                           app:layout_constraintBottom_toTopOf="@id/carrera"
                                           app:layout_constraintStart_toStartOf="parent"
                                           app:layout_constraintEnd_toEndOf="parent"
                                           app:cardBackgroundColor="@color/colorAccent"
                                           app:cardElevation="1dp"
                                           app:cardCornerRadius="6dp">

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_margin="14dp"
                      android:text="@string/bike_maker_pinarello"
                      android:textColor="@color/colorPrimary"
                      android:textSize="16sp"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView android:id="@+id/carrera"
                                           android:layout_width="wrap_content"
                                           android:layout_height="wrap_content"
                                           app:layout_constraintTop_toBottomOf="@id/pinarello"
                                           app:layout_constraintBottom_toBottomOf="parent"
                                           app:layout_constraintStart_toStartOf="parent"
                                           app:layout_constraintEnd_toEndOf="parent"
                                           app:cardBackgroundColor="@color/colorAccent"
                                           app:cardElevation="1dp"
                                           app:cardCornerRadius="6dp">

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_margin="14dp"
                      android:text="@string/bike_maker_carrera"
                      android:textColor="@color/colorPrimary"
                      android:textSize="16sp"/>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>