<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="match_parent">

        <androidx.cardview.widget.CardView android:id="@+id/sirius"
                                           android:layout_width="0dp"
                                           android:layout_height="wrap_content"
                                           app:layout_constraintWidth_default="percent"
                                           app:layout_constraintWidth_percent="0.6"
                                           app:layout_constraintTop_toTopOf="parent"
                                           app:layout_constraintBottom_toTopOf="@id/spica"
                                           app:layout_constraintStart_toStartOf="parent"
                                           app:layout_constraintEnd_toEndOf="parent"
                                           app:cardBackgroundColor="@color/colorAccent"
                                           app:cardElevation="1dp"
                                           app:cardCornerRadius="6dp">

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_margin="14dp"
                      android:text="@string/sirius"
                      android:textColor="@color/colorPrimary"
                      android:textSize="16sp"
                      android:layout_gravity="center"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView android:id="@+id/spica"
                                           android:layout_width="0dp"
                                           android:layout_height="wrap_content"
                                           app:layout_constraintWidth_default="percent"
                                           app:layout_constraintWidth_percent="0.6"
                                           app:layout_constraintTop_toBottomOf="@id/sirius"
                                           app:layout_constraintBottom_toTopOf="@id/albireo"
                                           app:layout_constraintStart_toStartOf="parent"
                                           app:layout_constraintEnd_toEndOf="parent"
                                           app:cardBackgroundColor="@color/colorAccent"
                                           app:cardElevation="1dp"
                                           app:cardCornerRadius="6dp">

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_margin="14dp"
                      android:text="@string/spica"
                      android:textColor="@color/colorPrimary"
                      android:textSize="16sp"
                      android:layout_gravity="center"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView android:id="@+id/albireo"
                                           android:layout_width="0dp"
                                           android:layout_height="wrap_content"
                                           app:layout_constraintWidth_default="percent"
                                           app:layout_constraintWidth_percent="0.6"
                                           app:layout_constraintTop_toBottomOf="@id/spica"
                                           app:layout_constraintBottom_toBottomOf="parent"
                                           app:layout_constraintStart_toStartOf="parent"
                                           app:layout_constraintEnd_toEndOf="parent"
                                           app:cardBackgroundColor="@color/colorAccent"
                                           app:cardElevation="1dp"
                                           app:cardCornerRadius="6dp">

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_margin="14dp"
                      android:text="@string/albireo"
                      android:textColor="@color/colorPrimary"
                      android:textSize="16sp"
                      android:layout_gravity="center"/>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>